--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,32 @@
-.App {
+.mainContainer {
+  background-color: lightblue;
+  display: "flex";
   text-align: center;
+  align-items: "center";
+  justify-content: "top";
+  flex-direction: "column";
+  gap: "25px";
+  height: "10vh";
+  width: "100%"
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sliderContainer {
+  background-color: aliceblue;
+  display: "flex";
+  padding-left: "30px";
+  text-align: center;
+  align-items: "center";
+  justify-content: "top";
+  flex-direction: "row";
+  height: "1500px"
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contentContainer {
+  background-color: aquamarine;
+  display: "flex";
+  align-items: "center";
+  justify-content: "top";
+  flex-direction: "row";
+  gap: "25px";
+  height: "100vh"
 }
