--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .mainContainer {
-  background-color: lightblue;
+  background-color: rgba(208, 181, 145, 0.893);
   display: "flex";
   text-align: center;
   align-items: "center";
@@ -22,11 +22,22 @@
 }
 
 .contentContainer {
-  background-color: aquamarine;
+  background-color: rgb(251, 251, 251);
   display: "flex";
   align-items: "center";
   justify-content: "top";
   flex-direction: "row";
-  gap: "25px";
-  height: "100vh"
+  height: "100vh";
+  width: "70%";
+  padding: "100px";
+}
+
+.contentList {
+  width: "50%" !important ;
+  max-width: 360;
+  background-color: "black";
+  display: "flex";
+  flex-direction: "column" !important;
+  justify-content: center;
+  padding: "250px";
 }
