--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,10 +3,11 @@
   display: flex;
   text-align: center;
   align-items: center;
-  justify-content: top;
+  justify-content: space-around;
   flex-direction: column;
   gap: 25px;
   width: 100%;
+  overflow: hidden;
 }
 
 .sliderContainer {
@@ -68,7 +69,6 @@
   justify-content: top;
   flex-direction: column;
   background-color: rgb(253, 253, 253);
-  gap: 10px;
   height: 100%;
   width: 100%;
 }
