--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,7 +36,7 @@
 
 .contentList {
   width: 50%;
-  max-width: 360;
+  max-width: 500;
   background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
@@ -52,7 +52,7 @@
   padding: 20px;
 }
 
-.forumCategory {
+.listItem {
   justify-content: left;
   border-bottom: 1px solid black;
 }
@@ -87,4 +87,11 @@
   width: 100%;
   height: 10vh;
   background-color: black;
+}
+
+.commentField {
+  background-color: rgb(248, 249, 249);
+  padding: 10px;
+  width: 30vw;
+  gap: 15px;
 }
