--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,7 @@
 
 .listItem {
   justify-content: left;
-  border-bottom: 1px solid black;
+  border-top: 1px solid black;
 }
 
 .forumTopic {
@@ -75,6 +75,13 @@
 
 .newsItem {
   justify-content: space-between;
+  border-top: 1px solid black;
+  gap: 20px;
+  padding-bottom: 0;
+}
+
+.latestNews {
+  border: 1px solid black;
 }
 
 .footer {
