--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,11 +45,13 @@
 }
 
 .forumList {
-  width: 70%;
+  width: 70vw;
+  max-width: 500;
   background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  justify-content: center;
+  padding: 250px;
 }
 
 .listItem {
@@ -58,9 +60,9 @@
 }
 
 .forumTopic {
-  justify-content: right;
   border: 1px solid black;
-  width: 50%;
+  justify-content: center;
+  gap: 20px;
 }
 
 .news {
