--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,7 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 250px;
+  padding: 0 !important;
 }
 
 .listItem {
@@ -62,7 +62,6 @@
 .forumTopic {
   border: 1px solid black;
   justify-content: center;
-  gap: 20px;
 }
 
 .news {
